[gd_scene load_steps=6 format=2]

[ext_resource path="res://world/buildings/well/sprites/well.png" type="Texture" id=1]
[ext_resource path="res://world/buildings/well/Well.gd" type="Script" id=2]
[ext_resource path="res://data/player_stats/Water.tres" type="Resource" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 6 )

[sub_resource type="CircleShape2D" id=2]
radius = 23.0217

[node name="StaticBody2D" type="StaticBody2D"]
collision_layer = 0
collision_mask = 8
script = ExtResource( 2 )
water = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 9 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = -52.0
margin_top = -62.0
margin_right = 52.0
margin_bottom = -31.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
